# testproject

./: README.md
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/api/: send_email.py  serializers.py  urls.py  views.py
backend/backend/: .env  middleware.py  settings.py  urls.py
backend/backend/templates/: login.html
backend/shop/: admin.py  models.py
