[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Belova Olga <obelova2003@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
django = "^5.0.6"
djangorestframework = "^3.15.1"
drf-spectacular = "^0.27.2"
rest-framework-simplejwt = "^0.0.2"
djoser = "^2.2.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
